JG-2001-07-24-1: qmaster - qdel:
                 - if a job is already in state deleted additional qdel's do 
                   not generate additional events to execd
                 - improved error output concerning tasks to be deleted 
                   (former output contained only job id), additional messages:
                   job "1595" task "4" does not exist
                   job "1595" task id range "1-4:2" comprises no tasks
                 - fixed bug in deletion of events to be resent  

JG-2001-07-24-0: Adoc: Function identifiers beginning with "-" 
                       (e.g. --Introduction) are not included in the function
                       index

CR-2001-07-23-0: Bugfix: qstat -j (Issue#: 2) causes 
                 "operation not implemented for target" error

EB-2001-07-23-0: Changes some html files
                 - link to contributor agreement
                 - added $ARCH variable to path (gethostname)
                 - deleted empty line in client output
                 - changed text width

CR-2001-07-20-0: Testsuite:
                 - qmod reschedule test is not completely implemented
                 - qrsh test showed error because of killing a job script
                   (exist status of expect child not 0) - disabled
                   error message for this open_spawn_process call
                 - shadowd migrate test can will stop if only one execution
                   host is in the cluster

AH-2001-07-20-0: - increased GRM_GDI_VERSION for GE 5.3
                 - fix qmaster core dump caused by old execd's sending load 
                   reports w/o REP_seqno
